<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/help_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/how_can_we_help_n_you"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_passportPhoto"
            style="@style/help_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_make_passport_size_photo"
            android:textColor="#00838F" />


        <TextView
            android:id="@+id/tv_aadhaar"
            style="@style/help_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_the_use_of_manual_aadhar_print_services_and_how_to_use" />

        <TextView
            android:id="@+id/tv_voter"
            style="@style/help_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_make_voter_id_card_with_manual_voter_print_service" />


    </LinearLayout>

    <TextView
        android:id="@+id/termCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/terms_and_condition"
        android:textAlignment="center"
        android:textColor="@color/themeColor"
        android:textSize="14sp"

        />
</RelativeLayout>