<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        android:text="@string/Image_Manipulation_Toolkit"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:columnCount="3"
        android:padding="10dp"
        android:rowCount="2"
        android:textAlignment="center">

        <LinearLayout
            android:id="@+id/imageCompressor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/person_icon"
                android:cropToPadding="true"
                android:src="@drawable/image_compress_icon" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Image_compressor"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ImageResizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:layout_width="70dp"

                android:layout_height="70dp"
                android:contentDescription="@string/person_icon_for_adhar"

                android:cropToPadding="true"
                android:src="@drawable/image_resize_icon" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resize_image"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/JPGToPDF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/passbook_icon"
                android:src="@drawable/jpg_to_pdf_icon" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jpg_to_pdf"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"/>



        </LinearLayout>


    </GridLayout>


</LinearLayout>