<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_icon"
            android:layout_gravity="end"
            android:id="@+id/iconCross"
            android:contentDescription="@string/no" />

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfViewDialog"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="400dp"
           />
        <TextView
            android:id="@+id/tvPageCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tvPdfName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSavePDF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/save_pdf" />

            <Button
                android:id="@+id/btnSharePDF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/share_pdf" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
